--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -5,8 +5,8 @@
     </div>
     <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="fa fa-plus" href="/experiences"> Experiences</a></li>        
-        <li><a class="fa fa-shield" href="/abilities"> Abilities</a></li>
+        <!-- <li><a class="fa fa-plus" href="/experiences"> Experiences</a></li>        
+        <li><a class="fa fa-shield" href="/abilities"> Abilities</a></li> -->
         <li><a class="fa fa-comment" href="/contact"> Contact</a></li>        
       </ul>
     </div>
