Change contact and footnote

--- a/client/components/footnote/footnote.view.ng.html
+++ b/client/components/footnote/footnote.view.ng.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footnote">
   <div class="list-group">
     <ul class="list-inline text-center">
       <li><a target="_blank" href="https://github.com/gonzalozunino" class="list-group-item fa fa-github fa-2x"></a></li>
