Contact and animations changes

--- a/client/components/footnote/footnote.view.ng.html
+++ b/client/components/footnote/footnote.view.ng.html
@@ -2,7 +2,7 @@
   <div class="list-group">
     <ul class="list-inline text-center">
       <li><a target="_blank" href="https://github.com/gonzalozunino" class="list-group-item fa fa-github fa-2x"></a></li>
-      <li><a target="_blank" href="https://ar.linkedin.com/in/gonzalozunino" class="list-group-item fa fa-linkedin fa-2x"></a></li>
+      <li><a target="_blank" href="https://instagram.com/gonezunino" class="list-group-item fa fa-instagram fa-2x"></a></li>
       <li><a target="_blank" href="https://twitter.com/gonezunino" class="list-group-item fa fa-twitter fa-2x"></a></li>
     </ul>
   </div>
