--- a/client/main/main.css
+++ b/client/main/main.css
@@ -3,13 +3,13 @@
 .text-xs-center { text-align: center; }
 .text-xs-justify { text-align: justify; }
 
-@media (min-width: 768px) {
-  .text-sm-left { text-align: left; }
-  .text-sm-right { text-align: right; }
-  .text-sm-center { text-align: center; }
-  .text-sm-justify { text-align: justify; }
+@media (min-width: 992px) {
+  .text-md-left { text-align: left; }
+  .text-md-right { text-align: right; }
+  .text-md-center { text-align: center; }
+  .text-md-justify { text-align: justify; }
 }
 
 .wrap {
-    padding: 10px;
+    padding: 15px;
 }
