--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -1,14 +1,23 @@
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" ng-click="isCollapsed = !isCollapsed" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="navbar-brand"><img class="img-responsive" src="signature.png" alt="Signature" width="190" height="160"></a>
-    </div>
-    <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a class="fa fa-plus" href="/experiences"> Experiences</a></li> -->
-        <!-- <li><a class="fa fa-shield" href="/abilities"> Abilities</a></li> -->
-        <li><a class="fa fa-comment" href="/contact"> Contact</a></li>
-      </ul>
-    </div>
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/"><img class="img-responsive" src="signature.png" alt="Signature" width="190" height="160"></a>
+      </div>
+      <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <!-- <li><a class="fa fa-plus" href="/experiences"> Experiences</a></li> -->
+            <!-- <li><a class="fa fa-shield" href="/abilities"> Abilities</a></li> -->
+            <li>
+              <a class="fa fa-comment hidden-xs" href="/contact"> Contacts</a>
+              <a class="fa fa-comment visible-xs" href="/contact" data-toggle="collapse" data-target=".navbar-collapse"> Contact</a>
+            </li>
+          </ul>
+      </div><!--/.nav-collapse -->
   </div>
 </div>
