Change theme fix navbar icons

--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-static-top">
+<div class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" ng-click="isCollapsed = !isCollapsed" class="navbar-toggle">
@@ -13,9 +13,9 @@
     </div>
     <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a class="fa fa-plus" href="/experiences"> Experiences</a></li> -->
-        <!-- <li><a class="fa fa-shield" href="/abilities"> Abilities</a></li> -->
-        <li><a class="fa fa-comment" href="/contact" nav-collapse> Contact</a></li>
+        <!-- <li><a href="/experiences" nav-collapse><i class="fa fa-plus"></i>&nbsp; Experiences</a></li> -->
+        <!-- <li><a href="/abilities" nav-collapse><i class="fa fa-shield"></i>&nbsp; Abilities</a></li> -->
+        <li><a href="/contact" nav-collapse><i class="fa fa-comment"></i>&nbsp; Contact</a></li>
       </ul>
     </div>
   </div>
