--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -13,9 +13,9 @@
     </div>
     <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a href="/experiences" nav-collapse><i class="fa fa-plus"></i>&nbsp; Experiences</a></li> -->
-        <!-- <li><a href="/abilities" nav-collapse><i class="fa fa-shield"></i>&nbsp; Abilities</a></li> -->
-        <li><a href="/contact" nav-collapse><i class="fa fa-comment"></i>&nbsp; Contact</a></li>
+        <!-- <li><a ui-sref="experiences" nav-collapse><i class="fa fa-plus"></i>&nbsp; Experiences</a></li> -->
+        <!-- <li><a ui-sref="abilities" nav-collapse><i class="fa fa-shield"></i>&nbsp; Abilities</a></li> -->
+        <li><a ui-sref="contact" nav-collapse><i class="fa fa-comment"></i>&nbsp; Contact</a></li>
       </ul>
     </div>
   </div>
