--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-          <a href="/" class="navbar-brand">
+          <a ui-sref="main" class="navbar-brand">
             <img class="img-responsive" src="signature.png" alt="Signature" width="190" height="160">
           </a>
     </div>
