--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" ng-click="isCollapsed = !isCollapsed" class="navbar-toggle">
@@ -13,9 +13,10 @@
     </div>
     <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a ui-sref="experiences" nav-collapse><i class="fa fa-plus"></i>&nbsp; Experiences</a></li> -->
-        <!-- <li><a ui-sref="abilities" nav-collapse><i class="fa fa-shield"></i>&nbsp; Abilities</a></li> -->
-        <li><a ui-sref="contact" nav-collapse><i class="fa fa-comment"></i>&nbsp; Contact</a></li>
+        <li><a href="#profile" du-smooth-scroll du-scrollspy nav-collapse>About me</a></li>
+        <li><a href="#experiences" du-smooth-scroll du-scrollspy nav-collapse>Experiences</a></li>
+        <li><a href="#abilities" du-smooth-scroll du-scrollspy nav-collapse>Abilities</a></li>
+        <li><a href="#contact" du-smooth-scroll du-scrollspy nav-collapse>Contact</a></li>
       </ul>
     </div>
   </div>
