--- a/client/main/main.css
+++ b/client/main/main.css
@@ -10,6 +10,6 @@
   .text-md-justify { text-align: justify; }
 }
 
-.wrap {
-    padding: 15px;
+.profile, .experiences, .abilities {
+	padding: 30px 0 30px 0;
 }
