--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -1,23 +1,25 @@
-<div class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" ng-click="isCollapsed = !isCollapsed" class="navbar-toggle">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+<div class="navbar-wrapper">  
+  <div class="navbar navbar-default sticktop" sticky>
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" ng-click="isCollapsed = !isCollapsed" class="navbar-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
-          <a ui-sref="main" class="navbar-brand">
-            <img class="img-responsive" src="signature.png" alt="Signature" width="190" height="160">
-          </a>
-    </div>
-    <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#profile" du-smooth-scroll du-scrollspy nav-collapse>About me</a></li>
-        <li><a href="#experiences" du-smooth-scroll du-scrollspy nav-collapse>Experiences</a></li>
-        <li><a href="#abilities" du-smooth-scroll du-scrollspy nav-collapse>Abilities</a></li>
-        <li><a href="#contact" du-smooth-scroll du-scrollspy nav-collapse>Contact</a></li>
-      </ul>
+        <a href="#main" du-smooth-scroll du-scrollspy duration="3000" class="navbar-brand">
+          <p class="hidden-md">Menu</p>
+        </a>
+      </div>
+      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
+        <ul class="nav navbar-nav text-center">
+          <li><a href="#aboutme" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
+          <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experiences</a></li>
+          <li><a href="#abilities" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Abilities</a></li>
+          <li><a href="#contact" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Contact</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
