--- a/client/components/midnav/midnav.view.ng.html
+++ b/client/components/midnav/midnav.view.ng.html
@@ -1,5 +1,5 @@
 <section id="midnav" class="hidden-xs">
-  <div id="status" parallax-background  class="parallax"  parallax-ratio="0.3">
+  <div id="status" class="parallax" parallax-background parallax-ratio="0.3" parallax-vertical-offset="20" style="background-position: 50% -243px;">
     <div class="parallax-overlay-2">
       <div class="container">
         <div class="title">
@@ -8,20 +8,20 @@
 
       <!-- Status --> 
         <div class="row count">
-          <div class="col-xs-6 col-md-3">
-            <i class="fa fa-lightbulb-o fa-3x"></i>
+          <div class="col-xs-6 col-md-3">            
+            <i class="fa fa-lightbulb-o fa-4x"></i>            
             <h4>IDEA</h4>
           </div>
           <div class="col-xs-6 col-md-3">
-            <i class="fa fa-paint-brush fa-3x"></i>
+            <i class="fa fa-paint-brush fa-4x"></i>
             <h4>DESIGN</h4>
           </div>
           <div class="col-xs-6 col-md-3">
-            <i class="fa fa-code fa-3x"></i>
+            <i class="fa fa-code fa-4x"></i>
             <h4>DEVELOP</h4>
           </div>
           <div class="col-xs-6 col-md-3">
-            <i class="fa fa-coffee fa-3x"></i>
+            <i class="fa fa-coffee fa-4x"></i>
             <h4>COFFEE</h4>
           </div>
 
