--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -15,7 +15,7 @@
       <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
         <ul class="nav navbar-nav text-center">
           <li><a href="#aboutme" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
-          <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experiences</a></li>
+          <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experience</a></li>
           <li><a href="#abilities" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Abilities</a></li>
           <li><a href="#contact" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Contact</a></li>
         </ul>
