--- a/client/components/prenav/prenav.view.ng.html
+++ b/client/components/prenav/prenav.view.ng.html
@@ -1,5 +1,5 @@
 <section id="top" class="hidden-xs">
-  <div id="home" parallax-background class="home-parallax" parallax-ratio="0.2" parallax-vertical-offset="20">
+  <div id="home" class="home-parallax" parallax-background parallax-ratio="0.6" parallax-vertical-offset="20" style="background-position: 50% 0px;">
     <div class="home-overlay-v2">
       <div class="container">
         <div class="col-xs-12 col-md-12">
