--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -12,9 +12,9 @@
           <p class="hidden-md">Menu</p>
         </a>
       </div>
-      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
+      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse wow fadeInUp">
         <ul class="nav navbar-nav text-center">
-          <li><a href="#aboutme" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
+          <li><a href="#main" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
           <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experience</a></li>
           <li><a href="#abilities" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Abilities</a></li>
           <li><a href="#contact" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Contact</a></li>
