Change animation style

--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -12,7 +12,7 @@
           <p class="hidden-md">Menu</p>
         </a>
       </div>
-      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse wow fadeInUp">
+      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse wow pulse">
         <ul class="nav navbar-nav text-center">
           <li><a href="#main" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
           <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experience</a></li>
