--- a/client/components/toolbar/toolbar.css
+++ b/client/components/toolbar/toolbar.css
@@ -1,5 +1,5 @@
 /*
-Toolbar Style
+Toolbar
 ------------------------------------------------------*/
 .navbar-wrapper .navbar{
     top: 0;
@@ -8,6 +8,9 @@ Toolbar Style
 }
 
 @media (min-width: 992px) {
+    /*
+    Toolbar Desktop
+    ------------------------------------------------------*/
     .navbar-header{
         display:none;
     }
@@ -23,31 +26,27 @@ Toolbar Style
         text-align: center;
         float: none;
     }
-
     .navbar-toggle{
         margin-top:14px;
     }
-
     /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
-      margin-top:0px;
+      margin-top:0;
       position: relative;
       z-index: 15;
       background:#262b37;
     }
     .navbar-wrapper .container{
-        padding:0px;
+        padding:0;
     }
-
     .navbar-collapse{
         padding:0;
     }
     .navbar-collapse.in{
         max-height:100%;
     }
-
     .navbar.navbar-inverse.navbar-static-top {
-      margin:0px auto;
+      margin:0 auto;
       background:#262b37;
       color:#c3c8d6;
       border:none;
