--- a/client/contact/contact.css
+++ b/client/contact/contact.css
@@ -1,7 +1,8 @@
-.list-item-unstyled .list-group-item { 
+/* Contact
+------------------------------------------------------------------------*/
+.list-item-unstyled .list-group-item {
 	border: none;
 }
-
 textarea.msg {
 	resize: none;
 }
