--- a/client/experiences/experiences.css
+++ b/client/experiences/experiences.css
@@ -1,3 +1,5 @@
+/* Experience
+------------------------------------------------------------------------*/
 #experiences {
 	background-color: #eeeeee;
 }
