Removing animations and fixing responsive behaviour

--- a/client/components/midnav/midnav.view.ng.html
+++ b/client/components/midnav/midnav.view.ng.html
@@ -1,5 +1,5 @@
-<section id="midnav" class="hidden-xs">
-  <div id="status" class="parallax" parallax-background parallax-ratio="0.3" parallax-vertical-offset="20" style="background-position: 50% -243px;">
+<section id="midnav" class="hidden-xs hidden-sm">
+  <div id="status" class="parallax" parallax-background parallax-ratio="0.3" parallax-vertical-offset="20">
     <div class="parallax-overlay-2">
       <div class="container">
         <div class="title">
