--- a/client/components/prenav/prenav.view.ng.html
+++ b/client/components/prenav/prenav.view.ng.html
@@ -1,4 +1,4 @@
-<section id="top" class="hidden-xs">
+<section id="top" class="hidden-xs hidden-sm">
   <div id="home" class="home-parallax" parallax-background parallax-ratio="0.6" parallax-vertical-offset="20" style="background-position: 50% 0px;">
     <div class="home-overlay-v2">
       <div class="container">
