--- a/client/components/toolbar/toolbar.view.ng.html
+++ b/client/components/toolbar/toolbar.view.ng.html
@@ -8,16 +8,21 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="#main" du-smooth-scroll du-scrollspy duration="3000" class="navbar-brand">
-          <p class="hidden-md">Menu</p>
+        <a href="#main" du-smooth-scroll du-scrollspy duration="850" class="navbar-brand">
+          <p class="hidden-sm hidden-md hidden-lg">Menu</p>
         </a>
       </div>
-      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse wow pulse">
+      <div collapse="!isCollapsed" class="navbar-main navbar-collapse collapse">
         <ul class="nav navbar-nav text-center">
-          <li><a href="#main" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>About me</a></li>
-          <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Experience</a></li>
-          <li><a href="#abilities" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Abilities</a></li>
-          <li><a href="#contact" du-smooth-scroll du-scrollspy duration="1000" nav-collapse>Contact</a></li>
+          <li class="hidden-xs" >
+              <a href="#aboutme" du-smooth-scroll du-scrollspy duration="850" nav-collapse>About me</a>
+          </li>
+          <li class="hidden-sm hidden-md hidden-lg" >
+            <a href="#main" du-smooth-scroll du-scrollspy duration="850" nav-collapse>About me</a>
+          </li>
+          <li><a href="#experiences" du-smooth-scroll du-scrollspy duration="850" nav-collapse>Experience</a></li>
+          <li><a href="#abilities" du-smooth-scroll du-scrollspy duration="850" nav-collapse>Abilities</a></li>
+          <li><a href="#contact" du-smooth-scroll du-scrollspy duration="850" nav-collapse>Contact</a></li>
         </ul>
       </div>
     </div>
